# ixblue_stdbin_decoder

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
.github/workflows/: ci.yml
cmake/: gtest_download.cmake.in  iXblueStdbinDecoderConfig.cmake.in  ixblue_stdbin_decoder-config.cmake.in
examples/: serial_listener.cpp  tcp_client.cpp  udp_listener.cpp
include/iXblue_stdbin_decoder/: data_serializer.h  memory_block_parser.h  stdbin_decoder.h  stdbin_encoder.h
include/iXblue_stdbin_decoder/data_models/: nav_header.h  stdbin.h
include/iXblue_stdbin_decoder/data_models/extended_navigation_data/: raw_rotation_rate_vessel_frame.h  rotation_acceleration_vessel_frame.h  rotation_acceleration_vessel_frame_deviation.h  vehicle_attitude_heading.h  vehicle_attitude_heading_deviation.h  vehicle_position.h  vehicle_position_deviation.h
include/iXblue_stdbin_decoder/data_models/external_data/: depth.h  dmi.h  dvl_ground_speed.h  dvl_water_speed.h  emlog.h  eventmarker.h  gnss.h  lbl.h  logbook.h  sound_velocity.h  turret_angles.h  usbl.h  utc.h  vtg.h
include/iXblue_stdbin_decoder/data_models/navigation_data/: acceleration_geographic_frame.h  acceleration_vessel_frame.h  acceleration_vessel_frame_deviation.h  ahrs_algorithm_status.h  ahrs_system_status.h  ahrs_user_status.h  attitude_heading.h  attitude_heading_deviation.h  attitude_quaternion.h  attitude_quaternion_deviation.h  course_speed_over_ground.h  current_geographic_frame.h  current_geographic_frame_deviation.h  heading_roll_pitch_rate.h  heave_surge_sway_speed.h  ins_algorithm_status.h  ins_system_status.h  ins_user_status.h  position.h  position_deviation.h  raw_acceleration_vessel_frame.h  realtime_heave_surge_sway.h  rotation_rate_vessel_frame.h  rotation_rate_vessel_frame_deviation.h  sensor_status.h  smart_heave.h  speed_geographic_frame.h  speed_geographic_frame_deviation.h  speed_vessel_frame.h  system_date.h  temperatures.h
include/iXblue_stdbin_decoder/data_serializers/extended_navigation_data/: raw_rotation_rate_vessel_frame.h  rotation_acceleration_vessel_frame.h  rotation_acceleration_vessel_frame_deviation.h  vehicle_attitude_heading.h  vehicle_attitude_heading_deviation.h  vehicle_position.h  vehicle_position_deviation.h
include/iXblue_stdbin_decoder/data_serializers/external_data/: depth.h  dmi.h  dvl_ground_speed.h  dvl_water_speed.h  emlog.h  eventmarker.h  gnss.h  lbl.h  logbook.h  sound_velocity.h  turret_angles.h  usbl.h  utc.h  vtg.h
include/ixblue_stdbin_decoder/: memory_block_parser.h  stdbin_decoder.h
src/: data_serializer.cpp  memory_block_parser.cpp  stdbin_decoder.cpp  stdbin_encoder.cpp
test/: data_serializers_extended_navigation.test.cc  data_serializers_external_data.test.cc  data_serializers_navigation.test.cc  memory_blocs_parser_extended_navigation.test.cc  memory_blocs_parser_external_data.test.cc  memory_blocs_parser_navigation.test.cc  stdbin_decoder.test.cc  stdbin_encoder.test.cc
test/datasets/: MinimalV2NavFrame.h  MinimalV2NavFrame.hpp  MinimalV3AnsFrame.h  MinimalV3AnsFrame.hpp
test/datasets/errors/: BadAnswerProtocolVersion.h  BadAnswerProtocolVersion.hpp  BadCheckSum.h  BadCheckSum.hpp  BadNavProtocolVersion.h  BadNavProtocolVersion.hpp
test/feature_test/: TestStdBinDecoderErrorRecovery.h
(+106 files in other folders)
